# RunShellcodeRust

./: Cargo.toml  README.md
.cargo/: config.toml
shellcodes/: findpeersh.sc  hello_world.sc
src/: error.rs  main.rs  shellcode.rs  shellcode_source.rs
